added endpoints of subscribers
